<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCard"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="#F8F8F6"
    android:layout_marginBottom="15dp"
    android:layout_marginHorizontal="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_med"
            android:layout_width="67dp"
            android:layout_height="63dp"
            android:layout_marginStart="2dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            android:src="@drawable/img_medicine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="#BFD9EA"
            app:strokeWidth="2dp" />


        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/title_example"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="36dp"
            android:text="@string/time_example"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="36dp"
            android:text="@string/pills_example"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="149dp"
            android:layout_marginTop="36dp"
            android:text="@string/eat_example"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/btt_del"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>